Figures ylabels updated.

--- a/outputs/09202021_10082021_10312021_11092021/Q10.20/Q10.20_scenario_Ethnicity_PGM.tex
+++ b/outputs/09202021_10082021_10312021_11092021/Q10.20/Q10.20_scenario_Ethnicity_PGM.tex
@@ -1,9 +1,9 @@
-\subsection{Q10.20 data 09202021 10082021 10312021 11092021 grouped by scenario \& Ethnicity \& PGM}
+\subsubsection{Q10.20 data 09202021 10082021 10312021 11092021 grouped by scenario \& Ethnicity \& PGM}
 
 \begin{comment}
                                   EFPR        EO      EFNR     n    pvalue
 (frauth, Maj, Advantaged)     0.530303  0.469697  0.515152  33.0  0.620400
-(frauth, Min, Advantaged)     0.522727  0.477273  0.363636  22.0  0.737562
+(frauth, Min, Advantaged)     0.521739  0.478261  0.369565  23.0  0.740717
 (frauth, Min, Disadvantaged)  0.404762  0.595238  0.523810  21.0  0.287938
 (icu, Maj, Advantaged)        0.685185  0.314815  0.666667  27.0  0.030762
 (icu, Maj, Disadvantaged)     0.571429  0.428571  0.571429   7.0  0.444564
@@ -22,7 +22,7 @@
         scenario & Ethnicity & PGM & EFPR & EO & EFNR & n & p-value\\
         \hline
         frauth & Maj & Advantaged & \textbf{0.530} & 0.470 & \textbf{0.515} & 33.0 & 0.620\\
-		frauth & Min & Advantaged & \textbf{0.523} & 0.477 & 0.364 & 22.0 & 0.738\\
+		frauth & Min & Advantaged & \textbf{0.522} & 0.478 & 0.370 & 23.0 & 0.741\\
 		frauth & Min & Disadvantaged & 0.405 & \textbf{0.595} & \textbf{0.524} & 21.0 & 0.288\\
 		icu & Maj & Advantaged & \textbf{0.685} & 0.315 & \textbf{0.667} & 27.0 & \textbf{0.031}\\
 		icu & Maj & Disadvantaged & \textbf{0.571} & 0.429 & \textbf{0.571} & 7.0 & 0.445\\
