--- a/outputs/09202021_10082021_10312021_11092021/Q10.20/Q10.20_scenario_PGM.tex
+++ b/outputs/09202021_10082021_10312021_11092021/Q10.20/Q10.20_scenario_PGM.tex
@@ -1,8 +1,8 @@
-\subsection{Q10.20 data 09202021 10082021 10312021 11092021 grouped by scenario \& PGM}
+\subsubsection{Q10.20 data 09202021 10082021 10312021 11092021 grouped by scenario \& PGM}
 
 \begin{comment}
                              EFPR        EO      EFNR     n    pvalue
-(frauth, Advantaged)     0.527273  0.472727  0.454545  55.0  0.553938
+(frauth, Advantaged)     0.526786  0.473214  0.455357  56.0  0.555439
 (frauth, Disadvantaged)  0.404762  0.595238  0.523810  21.0  0.287938
 (icu, Advantaged)        0.621622  0.378378  0.567568  37.0  0.056030
 (icu, Disadvantaged)     0.481481  0.518519  0.685185  27.0  0.950828
@@ -16,7 +16,7 @@
         \hline
         scenario & PGM & EFPR & EO & EFNR & n & p-value\\
         \hline
-        frauth & Advantaged & \textbf{0.527} & 0.473 & 0.455 & 55.0 & 0.554\\
+        frauth & Advantaged & \textbf{0.527} & 0.473 & 0.455 & 56.0 & 0.555\\
 		frauth & Disadvantaged & 0.405 & \textbf{0.595} & \textbf{0.524} & 21.0 & 0.288\\
 		icu & Advantaged & \textbf{0.622} & 0.378 & \textbf{0.568} & 37.0 & 0.056\\
 		icu & Disadvantaged & 0.481 & \textbf{0.519} & \textbf{0.685} & 27.0 & 0.951\\
