--- a/outputs/09202021_10082021_10312021_11092021/Q10.20/Q10.20_scenario_group.tex
+++ b/outputs/09202021_10082021_10312021_11092021/Q10.20/Q10.20_scenario_group.tex
@@ -1,8 +1,8 @@
-\subsection{Q10.20 data 09202021 10082021 10312021 11092021 grouped by scenario \& group}
+\subsubsection{Q10.20 data 09202021 10082021 10312021 11092021 grouped by scenario \& group}
 
 \begin{comment}
                         EFPR        EO      EFNR     n    pvalue
-(frauth, majority)  0.569444  0.430556  0.500000  36.0  0.353693
+(frauth, majority)  0.567568  0.432432  0.500000  37.0  0.351657
 (frauth, minority)  0.425000  0.575000  0.450000  40.0  0.195373
 (icu, majority)     0.621212  0.378788  0.560606  33.0  0.045164
 (icu, minority)     0.500000  0.500000  0.677419  31.0  1.000000
@@ -16,7 +16,7 @@
         \hline
         scenario & group & EFPR & EO & EFNR & n & p-value\\
         \hline
-        frauth & majority & \textbf{0.569} & 0.431 & 0.500 & 36.0 & 0.354\\
+        frauth & majority & \textbf{0.568} & 0.432 & 0.500 & 37.0 & 0.352\\
 		frauth & minority & 0.425 & \textbf{0.575} & 0.450 & 40.0 & 0.195\\
 		icu & majority & \textbf{0.621} & 0.379 & \textbf{0.561} & 33.0 & \textbf{0.045}\\
 		icu & minority & 0.500 & 0.500 & \textbf{0.677} & 31.0 & 1.000\\
