--- a/outputs/10312021/Q10.20/Q10.20_scenario_x_first.tex
+++ b/outputs/10312021/Q10.20/Q10.20_scenario_x_first.tex
@@ -1,4 +1,4 @@
-\subsection{Q10.20 data 10312021 grouped by scenario \& x_first}
+\subsubsection{Q10.20 data 10312021 grouped by scenario \& x_first}
 
 \begin{comment}
                      EFPR        EO      EFNR     n    pvalue
