--- a/outputs/10312021_11092021/Q10.20/Q10.20_scenario_Ethnicity.tex
+++ b/outputs/10312021_11092021/Q10.20/Q10.20_scenario_Ethnicity.tex
@@ -1,13 +1,13 @@
 \subsubsection{Q10.20 data 10312021 11092021 grouped by scenario \& Ethnicity}
 
 \begin{comment}
-                   EFPR        EO      EFNR     n    pvalue
-(frauth, Maj)  0.444444  0.555556  0.527778  18.0  0.633124
-(frauth, Min)  0.520000  0.480000  0.400000  25.0  0.857193
-(icu, Maj)     0.647059  0.352941  0.676471  17.0  0.069154
-(icu, Min)     0.578947  0.421053  0.578947  19.0  0.457470
-(rent, Maj)    0.277778  0.722222  0.500000  18.0  0.019675
-(rent, Min)    0.500000  0.500000  0.476190  21.0  0.885234
+                             EFPR        EO      EFNR     n    pvalue
+(frauth, Caucasian)      0.444444  0.555556  0.527778  18.0  0.633124
+(frauth, Non-Caucasian)  0.520000  0.480000  0.400000  25.0  0.857193
+(icu, Caucasian)         0.647059  0.352941  0.676471  17.0  0.069154
+(icu, Non-Caucasian)     0.578947  0.421053  0.578947  19.0  0.457470
+(rent, Caucasian)        0.277778  0.722222  0.500000  18.0  0.019675
+(rent, Non-Caucasian)    0.500000  0.500000  0.476190  21.0  0.885234
 \end{comment}
 
 \begin{table}[h]
@@ -16,12 +16,12 @@
         \hline
         scenario & Ethnicity & EFPR & EO & EFNR & n & p-value\\
         \hline
-        frauth & Maj & 0.444 & \textbf{0.556} & \textbf{0.528} & 18.0 & 0.633\\
-		frauth & Min & \textbf{0.520} & 0.480 & 0.400 & 25.0 & 0.857\\
-		icu & Maj & \textbf{0.647} & 0.353 & \textbf{0.676} & 17.0 & 0.069\\
-		icu & Min & \textbf{0.579} & 0.421 & \textbf{0.579} & 19.0 & 0.457\\
-		rent & Maj & 0.278 & \textbf{0.722} & 0.500 & 18.0 & \textbf{0.020}\\
-		rent & Min & 0.500 & 0.500 & 0.476 & 21.0 & 0.885\\
+        frauth & Caucasian & 0.444 & \textbf{0.556} & \textbf{0.528} & 18.0 & 0.633\\
+		frauth & Non-Caucasian & \textbf{0.520} & 0.480 & 0.400 & 25.0 & 0.857\\
+		icu & Caucasian & \textbf{0.647} & 0.353 & \textbf{0.676} & 17.0 & 0.069\\
+		icu & Non-Caucasian & \textbf{0.579} & 0.421 & \textbf{0.579} & 19.0 & 0.457\\
+		rent & Caucasian & 0.278 & \textbf{0.722} & 0.500 & 18.0 & \textbf{0.020}\\
+		rent & Non-Caucasian & 0.500 & 0.500 & 0.476 & 21.0 & 0.885\\
 		
         \hline
     \end{tabular}
