--- a/outputs/11092021/Q10.20/Q10.20_scenario.tex
+++ b/outputs/11092021/Q10.20/Q10.20_scenario.tex
@@ -1,10 +1,10 @@
-\subsection{Q10.20 data 11092021 grouped by scenario}
+\subsubsection{Q10.20 data 11092021 grouped by scenario}
 
 \begin{comment}
-            EFPR        EO      EFNR     n    pvalue
-frauth  0.476190  0.523810  0.476190  21.0  1.000000
-icu     0.500000  0.500000  0.647059  17.0  0.494974
-rent    0.416667  0.583333  0.444444  18.0  0.361935
+               EFPR        EO      EFNR     n    pvalue
+(frauth,)  0.477273  0.522727  0.477273  22.0  0.986772
+(icu,)     0.500000  0.500000  0.647059  17.0  0.494974
+(rent,)    0.416667  0.583333  0.444444  18.0  0.361935
 \end{comment}
 
 \begin{table}[h]
@@ -13,7 +13,7 @@ rent    0.416667  0.583333  0.444444  18.0  0.361935
         \hline
         scenario & EFPR & EO & EFNR & n & p-value\\
         \hline
-        frauth & 0.476 & \textbf{0.524} & 0.476 & 21.0 & 1.000\\
+        frauth & 0.477 & \textbf{0.523} & 0.477 & 22.0 & 0.987\\
 		icu & 0.500 & 0.500 & \textbf{0.647} & 17.0 & 0.495\\
 		rent & 0.417 & \textbf{0.583} & 0.444 & 18.0 & 0.362\\
 		
