--- a/outputs/11092021/Q10.20/Q10.20_scenario_PGM.tex
+++ b/outputs/11092021/Q10.20/Q10.20_scenario_PGM.tex
@@ -1,8 +1,8 @@
-\subsection{Q10.20 data 11092021 grouped by scenario \& PGM}
+\subsubsection{Q10.20 data 11092021 grouped by scenario \& PGM}
 
 \begin{comment}
                              EFPR        EO      EFNR     n    pvalue
-(frauth, Advantaged)     0.541667  0.458333  0.458333  12.0  0.688328
+(frauth, Advantaged)     0.538462  0.461538  0.461538  13.0  0.694887
 (frauth, Disadvantaged)  0.388889  0.611111  0.500000   9.0  0.580712
 (icu, Advantaged)        0.555556  0.444444  0.555556   9.0  0.359375
 (icu, Disadvantaged)     0.437500  0.562500  0.750000   8.0  0.825432
@@ -16,7 +16,7 @@
         \hline
         scenario & PGM & EFPR & EO & EFNR & n & p-value\\
         \hline
-        frauth & Advantaged & \textbf{0.542} & 0.458 & 0.458 & 12.0 & 0.688\\
+        frauth & Advantaged & \textbf{0.538} & 0.462 & 0.462 & 13.0 & 0.695\\
 		frauth & Disadvantaged & 0.389 & \textbf{0.611} & 0.500 & 9.0 & 0.581\\
 		icu & Advantaged & \textbf{0.556} & 0.444 & \textbf{0.556} & 9.0 & 0.359\\
 		icu & Disadvantaged & 0.438 & \textbf{0.562} & \textbf{0.750} & 8.0 & 0.825\\
