--- a/outputs/11092021/Q10.20/Q10.20_scenario_group.tex
+++ b/outputs/11092021/Q10.20/Q10.20_scenario_group.tex
@@ -1,8 +1,8 @@
-\subsection{Q10.20 data 11092021 grouped by scenario \& group}
+\subsubsection{Q10.20 data 11092021 grouped by scenario \& group}
 
 \begin{comment}
                         EFPR        EO      EFNR     n    pvalue
-(frauth, majority)  0.722222  0.277778  0.500000   9.0  0.269745
+(frauth, majority)  0.700000  0.300000  0.500000  10.0  0.247561
 (frauth, minority)  0.291667  0.708333  0.458333  12.0  0.136180
 (icu, majority)     0.714286  0.285714  0.571429   7.0  0.139712
 (icu, minority)     0.350000  0.650000  0.700000  10.0  0.750316
@@ -16,7 +16,7 @@
         \hline
         scenario & group & EFPR & EO & EFNR & n & p-value\\
         \hline
-        frauth & majority & \textbf{0.722} & 0.278 & 0.500 & 9.0 & 0.270\\
+        frauth & majority & \textbf{0.700} & 0.300 & 0.500 & 10.0 & 0.248\\
 		frauth & minority & 0.292 & \textbf{0.708} & 0.458 & 12.0 & 0.136\\
 		icu & majority & \textbf{0.714} & 0.286 & \textbf{0.571} & 7.0 & 0.140\\
 		icu & minority & 0.350 & \textbf{0.650} & \textbf{0.700} & 10.0 & 0.750\\
