--- a/outputs/10312021/Q10.20/Q10.20_scenario_PGM.tex
+++ b/outputs/10312021/Q10.20/Q10.20_scenario_PGM.tex
@@ -1,4 +1,4 @@
-\subsection{Q10.20 data 10312021 grouped by scenario \& PGM}
+\subsubsection{Q10.20 data 10312021 grouped by scenario \& PGM}
 
 \begin{comment}
                              EFPR        EO      EFNR     n    pvalue
