--- a/outputs/11092021/Q10.20/Q10.20_scenario_Ethnicity.tex
+++ b/outputs/11092021/Q10.20/Q10.20_scenario_Ethnicity.tex
@@ -1,9 +1,9 @@
-\subsection{Q10.20 data 11092021 grouped by scenario \& Ethnicity}
+\subsubsection{Q10.20 data 11092021 grouped by scenario \& Ethnicity}
 
 \begin{comment}
                    EFPR        EO      EFNR     n    pvalue
 (frauth, Maj)  0.500000  0.500000  0.571429   7.0  0.791676
-(frauth, Min)  0.464286  0.535714  0.428571  14.0  0.871600
+(frauth, Min)  0.466667  0.533333  0.433333  15.0  0.860520
 (icu, Maj)     0.500000  0.500000  0.812500   8.0  0.666228
 (icu, Min)     0.500000  0.500000  0.500000   9.0  0.623772
 (rent, Maj)    0.227273  0.772727  0.590909  11.0  0.015680
@@ -17,7 +17,7 @@
         scenario & Ethnicity & EFPR & EO & EFNR & n & p-value\\
         \hline
         frauth & Maj & 0.500 & 0.500 & \textbf{0.571} & 7.0 & 0.792\\
-		frauth & Min & 0.464 & \textbf{0.536} & 0.429 & 14.0 & 0.872\\
+		frauth & Min & 0.467 & \textbf{0.533} & 0.433 & 15.0 & 0.861\\
 		icu & Maj & 0.500 & 0.500 & \textbf{0.812} & 8.0 & 0.666\\
 		icu & Min & 0.500 & 0.500 & 0.500 & 9.0 & 0.624\\
 		rent & Maj & 0.227 & \textbf{0.773} & \textbf{0.591} & 11.0 & \textbf{0.016}\\
